Replaced ScalarModel/ScalarGeneric by UserValue. I'm a little bit unhappy about the way how ScalarLists are treated. I'll possibly need a counterpart of UserValue for arrays instead of scalars.

--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,18 @@
 		{
 			"type": "vcs",
 			"url": "https://github.com/DarthCorvidus/plibv4-assert"
+		},
+		{
+			"type": "vcs",
+			"url": "https://github.com/DarthCorvidus/plibv4-uservalue"
 		}
 	],
 	"name": "plibv4/import",
 	"require": {
 			"plibv4/convert": "dev-main",
 			"plibv4/validate": "dev-main",
-			"plibv4/assert": "dev-main"
+			"plibv4/assert": "dev-main",
+			"plibv4/uservalue": "dev-main"
 	},
 	"autoload": {
         "classmap": ["src/"]
