--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,19 @@
 			"plibv4/assert": "dev-main",
 			"plibv4/uservalue": "dev-main"
 	},
+	"require-dev": {
+			"phpunit/phpunit": "^9"		
+	},
 	"autoload": {
         "classmap": ["src/"]
-    }
-
+    },
+	"scripts": {
+		"test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests",
+		"testdox": "./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox --colors=always tests"
+	},
+	"config": {
+		"platform": {
+			"php": "7.4"
+		}
+	}
 }
